video list spacing for safari bug4

--- a/css/style.css
+++ b/css/style.css
@@ -2414,8 +2414,8 @@ body[data-design="option-4"] {
     i.play-float-icon {
 
         font-size: 10rem;
-        transform: translateY(-45%);
-        /* top: 145px;*/
+        /*  transform: translateY(-45%);*/
+        top: 40px;
 
 
     }
